<resources>
    <string name="app_name">AutoReflex</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Examen</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="tab_1_username">Create Account</string>
    <string name="tab_2_id">Add ID</string>
    <string name="tab_3_school">Change school</string>
    <string name="login_sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="forgot_password">Forgot password</string>
    <string name="document_list">Documents list</string>
    <string name="car_list">Car list</string>
    <string name="instructor_list">Instructor list</string>

    <string name="user_creation">Create account</string>
    <string name="id_gathering">We need your id</string>


    <string name="select_school">Please select your school</string>
    <string name="select_school2">Select school</string>
    <string name="select_type">Select type</string>
    <string name="select_wait">Waiting for data from server</string>

    <string name="hello_blank_fragment">Hello my blank fragment</string>

    <string name="car_update">Update</string>
    <string name="car_itp">ITP</string>
    <string name="car_insurance">Insurance</string>

    <string name="instructor_atestat">Atestat</string>
    <string name="instructor_buletin">Buletin</string>
    <string name="instructor_permis">Permis</string>
    <string name="instructor_medical">Asigurare Medicala</string>
    <string name="instructor_cazier">Cazier</string>
    <string name="communicate">Communicate</string>
    <string name="loading">Loading …</string>
    <string name="delete_item">Delete item</string>
    <string name="add_instructor">Add instructor</string>
    <string name="add_car">Add Car</string>
    <string name="law_course">Curs legislatie</string>
    <string name="learning">Mediu de invatare</string>
    <string name="jump_ahead">Sari la… (1 si %1$d)</string>
    <string name="press_start">Apasati start pentru a continua de unde ati ramas sau</string>
    <string name="intrebarea">Intrebarea %1$d din %2$d</string>
    <string name="img_view">Imaginea de care se vorbeste in intrebare</string>
    <string name="verifiva_raspunsul">Verifiva</string>
    <string name="urmatoarea_intrebare">Urmatoarea</string>
    <string name="user_profile">Profile</string>
    <string name="username">Username</string>
    <string name="update">Update</string>
    <string name="ati_ajuns_la_sfarsit">Ati ajuns la sfarsit</string>
</resources>
