<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home"
            android:visible="false"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery"
            android:visible="false"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow"
            android:visible="false"/>
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools"
            android:visible="false"/>
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/document_list"
            android:visible="false"/>

        <item
            android:id="@+id/car_fragment"
            android:icon="@drawable/ic_menu_car"
            android:title="@string/car_list"
            android:visible="false"/>

        <item
            android:id="@+id/instructor_fragment"
            android:icon="@drawable/ic_menu_instructor"
            android:title="@string/instructor_list"
            android:visible="false"/>

        <item
            android:id="@+id/law_fragment"
            android:icon="@drawable/ic_law"
            android:title="@string/law_course"
            android:visible="false"/>
    </group>

    <item android:id="@+id/cominicate"
        android:title="@string/communicate"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share"
                android:visible="false"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send"
                android:visible="false"/>
        </menu>
    </item>

</menu>
