<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.mocan.autoreflex.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mocan.autoreflex.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mocan.autoreflex.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.mocan.autoreflex.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.mocan.autoreflex.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.mocan.autoreflex.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.mocan.autoreflex.ui.folder.FolderFragment"
        android:label="@string/document_list"
        tools:layout="@layout/folder_fragment"/>


    <fragment
        android:id="@+id/car_fragment"
        android:name="com.mocan.autoreflex.ui.car.CarFragment"
        android:label="@string/car_list"
        tools:layout="@layout/fragment_car"/>

    <fragment
        android:id="@+id/instructor_fragment"
        android:name="com.mocan.autoreflex.ui.instructor.InstructorFragment"
        android:label="@string/instructor_list"
        tools:layout="@layout/fragment_instructor"/>

    <fragment
        android:id="@+id/law_fragment"
        android:name="com.mocan.autoreflex.LawFragment"
        android:label="@string/law_course"
        tools:layout="@layout/fragment_law_course"/>
</navigation>