<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SchoolSelectionFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_school"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/select_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_school2"
        android:layout_centerInParent="true"/>

    <ProgressBar
        android:id="@+id/options_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/select_school"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/options_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_wait"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/options_progress"
        android:layout_marginTop="15dp"/>

</RelativeLayout>