<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_toEndOf="@+id/item_number"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/delete_instr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/delete_item"
            android:src="@drawable/delete_24dp" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/expandViewInstr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/instructor_atestat"
                android:textAppearance="?attr/textAppearanceListItem" />

            <EditText
                android:id="@+id/instructor_atestat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceListItem"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/instructor_buletin"
                android:textAppearance="?attr/textAppearanceListItem" />

            <EditText
                android:id="@+id/instructor_buletin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceListItem"
                tools:ignore="LabelFor" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/instructor_permis"
                android:textAppearance="?attr/textAppearanceListItem" />

            <EditText
                android:id="@+id/instructor_permis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceListItem"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/instructor_medical"
                android:textAppearance="?attr/textAppearanceListItem" />

            <EditText
                android:id="@+id/instructor_medical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceListItem"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/instructor_cazier"
                android:textAppearance="?attr/textAppearanceListItem" />

            <EditText
                android:id="@+id/instructor_cazier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceListItem"
                tools:ignore="LabelFor" />
        </LinearLayout>


        <Button
            android:id="@+id/instructor_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/car_update" />


    </LinearLayout>

</LinearLayout>
