<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.learning.PracticeFragment">
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/nr_intrebare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intrebarea" />

        <TextView
            android:id="@+id/intrebarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nr_intrebare"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_view"
            android:layout_below="@+id/intrebarea" />


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group"
            android:layout_below="@+id/image"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/A"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="2dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/B"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="2dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/C"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="2dp"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/verifica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toggle_button_group"
            android:text="@string/verifiva_raspunsul"
            android:textAlignment="center"
            app:icon="@drawable/ic_check_black_24dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/toggle_button_group"
            android:gravity="end"
            android:enabled="false"
            app:icon="@drawable/ic_arrow_24dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/urmatoarea_intrebare"
            android:layout_marginBottom="24dp"/>


    </RelativeLayout>
</ScrollView>